--- a/public/422.html
+++ b/public/422.html
@@ -50,9 +50,7 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h1>NOPE! The change you wanted was rejected.</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
